# cdse-dl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
cdse/: auth.py
cdse/odata/: __init__.py  attributes.py  download.py  filter.py  search.py
cdse_dl/: __init__.py  auth.py  download.py  subscriptions.py  types.py  utils.py
cdse_dl/odata/: __init__.py  attributes.py  download.py  filter.py  search.py  utils.py
cdse_dl/opensearch/: search.py
src/cdse_dl/: auth.py  download.py  subscriptions.py  trace.py  types.py  utils.py
src/cdse_dl/odata/: __init__.py  attributes.py  constants.py  filter.py  search.py  subscriptions.py  types.py  utils.py
src/cdse_dl/opensearch/: search.py
tests/: auth_test.py
tests/odata/: filter_test.py  search_test.py
tests/odata/cassettes/search_test/: invalid_search_params.yaml  search_s2_by_name.yaml
