[project]
name = "cdse-dl"
version = "0.1.0"
description = "Clients for searching and downloading from Copernicus Data Space Ecosystem"
authors = [
    { name = "Tyler", email = "31015976+tylanderson@users.noreply.github.com" },
]
dependencies = [
    "requests",
    "tinynetrc",
    "s3fs",
    "blake3",
    "tqdm",
    "python-dateutil",
    "shapely",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = ["pytest", "requests-mock", "pytest-recording", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
