[project]
name = "cdse-dl"
version = "0.1.0-alpha.1"
description = "Clients for interacting with Copernicus Data Space Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blake3>=0.3.1",
    "python-dateutil>=2.7.0",
    "requests>=2.28.1",
    "s3fs>=2022.5.0",
    "shapely>=2.0.4",
    "tinynetrc>=1.3.1",
    "tqdm>=4.63.2",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20250328",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-recording>=0.13.2",
    "requests-mock>=1.12.1",
    "ruff>=0.6.4",
    "ipykernel>=6.29.5",
    "twine>=5.1.1",
    "pre-commit>=4.1.0",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore `D` rules in tests
"tests/**.py" = ["D"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true